# example-standalone-inferencing-espressif-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
edge-impulse-sdk/cmake/: utils.cmake
edge-impulse-sdk/porting/: ei_classifier_porting.h
edge-impulse-sdk/porting/espressif/: ei_classifier_porting.cpp
edge-impulse-sdk/porting/synaptics/: ei_classifier_porting.cpp
edge-impulse-sdk/tensorflow/lite/micro/kernels/: add.cc  conv.cc  depthwise_conv.cc  fully_connected.cc  mul.cc  pooling.cc
main/: CMakeLists.txt  main.cpp
